# starsep_utils

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  flake.nix  justfile  lefthook.yml  pyproject.toml  shell.nix
src/starsep_utils/: __init__.py  distance.py  duplicates.py  fileSize.py  healthchecks.py  logDuration.py  models.py  overpass.py
src/tests/: distance_test.py  duplicates_test.py  fileSize_test.py  logDuration_test.py  overpass_test.py
