[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "starsep_utils"
version = "0.1.0"
authors = [
    { name="Filip Czaplicki", email="github@starsep.com" },
]
description = "starsep's utils. Mostly for osm/geo projects"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = []
license = {text = "AGPLv3"}

[project.urls]
Homepage = "https://github.com/starsep/starsep_utils"
Issues = "https://github.com/starsep/starsep_utils/issues"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]
