[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "starsep_utils"
version = "0.9.2"
authors = [
    { name="Filip Czaplicki", email="github@starsep.com" },
]
description = "starsep's utils. Mostly for osm/geo projects"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "funcy>=2.0",
    "httpx>=0.27.0",
]
license = {text = "AGPLv3"}

[project.urls]
Homepage = "https://github.com/starsep/starsep_utils"
Issues = "https://github.com/starsep/starsep_utils/issues"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "ruff>=0.11.9",
]
